# ai-researcher-agent

./: .gitignore  Makefile  README.md  config.yaml  pyproject.toml  test_urls.ipynb
src/: agent.py  html_formatter.py  main.py  pulse.py
src/tools/: __init__.py  arxiv_tool.py  base_tool.py  page.html  web_search.py  webscraper_tool.py
tests/: test_html_formatter.py
